openais integration and code clean up